<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">bai2</string>
    <string name="app_title">LifeCycle</string>

    <string name="label_gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <string name="label_birthday">Birthday</string>
    <string name="hint_birthday">Birthday</string>
    <string name="button_select">Select</string>

    <string name="label_address">Address</string>
    <string name="hint_address">Address</string>

    <string name="label_email">Email</string>
    <string name="hint_email">Email</string>

    <string name="terms_text">I agree to Terms of Use</string>
    <string name="button_register">Register</string>

    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
</resources>
